# NoxicCore

./: COPYING  CREDITS  INSTALL  README.md  TERM OF USE AGREEMENT  git_version.sh  tag
cmake/: CMakeLists.txt
cmake/scripts/: CMakeLists.txt
cmake/scripts/battlegrounds/: CMakeLists.txt
cmake/scripts/eventscripts/: CMakeLists.txt
cmake/scripts/gossipscripts/: CMakeLists.txt
cmake/scripts/instancescripts/: CMakeLists.txt
cmake/scripts/miscscripts/: CMakeLists.txt
cmake/scripts/objectscripts/: CMakeLists.txt
cmake/scripts/questscripts/: CMakeLists.txt
cmake/scripts/spellhandlers/: CMakeLists.txt
cmake/scripts/worldpvpscripts/: CMakeLists.txt
cmake/scripts/zonescripts/: CMakeLists.txt
cmake/world/: CMakeLists.txt
configs/: arcpro-logon.conf  arcpro-optional.conf  arcpro-realms.conf  arcpro-world.conf
configs/de/: arcpro-logon.conf  arcpro-optional.conf  arcpro-realms.conf  arcpro-world.conf
dep/include/libmpq_new/: mpq_libmpq04.h
extras/Spell_to_sql/src/: dbcfile.cpp  dbcfile.h
extras/spellfailure_extractor/: spellfailure_extractor.cpp
sql/: logon_structure.sql
sql/world_updates/: 2013-10-28_07-54_warsong_gulch.sql  2013-10-28_16-16_creature_power_type.sql  2013-11-24_01_creature_spawns.sql  2013-11-28_01_isle_of_conquest.sql  2013-12-01_01_loot_gameobject.sql
src/arcpro-crashreport/: Main.c
src/arcpro-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  PeriodicFunctionCall_Thread.h
src/arcpro-shared/: Array.h  AuthCodes.h  ByteBuffer.h  CRefcounter.h  CThreads.cpp  CThreads.h  CallBack.h  CircularQueue.h  Common.h  CrashHandler.cpp  CrashHandler.h  Define.h  DynLib.cpp  DynLib.hpp  Errors.h  FastQueue.h  FindFiles.cpp  FindFiles.hpp  FindFilesResult.hpp  LocationVector.h  Log.cpp  Log.h  MapFile.cpp  MapFile.h  MapFileEntry.cpp  MapFileEntry.h  MersenneTwister.cpp  MersenneTwister.h  PerformanceCounter.cpp  PerformanceCounter.hpp  PreallocatedQueue.h  RC4Engine.h  Singleton.h  StackBuffer.h  StackTrace.cpp  StackTrace.h  StackWalker.cpp  StackWalker.h  Storage.h  SysInfo.cpp  (+16 more)
src/arcpro-shared/Auth/: BigNumber.cpp  BigNumber.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/arcpro-shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/arcpro-shared/Database/: CreateInterface.cpp  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h
src/arcpro-shared/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsWin32.cpp  SocketWin32.cpp
src/arcpro-shared/Threading/: AtomicBoolean.cpp  AtomicBoolean.h  AtomicCounter.cpp  AtomicCounter.h  AtomicFloat.cpp  AtomicFloat.h  AtomicULong.cpp  AtomicULong.h  ConditionVariable.cpp  ConditionVariable.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
src/arcpro-world/: AIEvents.cpp  AIEvents.h  AIInterface.cpp  AIInterface.h  AchievementMgr.cpp  AchievementMgr.h  AddonMgr.cpp  AddonMgr.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BaseConsole.h  Battleground.cpp  Battleground.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  CellHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CollideInterface.cpp  CollideInterface.h  CombatHandler.cpp  CommonScheduleThread.cpp  (+213 more)
src/arcpro-world/DBC/: DBCStores.cpp  DBCStores.h
src/arcpro-world/Entities/Summons/: CompanionSummon.cpp  CompanionSummon.h  GuardianSummon.cpp  GuardianSummon.h  PossessedSummon.cpp  PossessedSummon.h  Summon.cpp  Summon.h  TotemSummon.cpp  TotemSummon.h  WildSummon.cpp  WildSummon.h
src/scripts/: README  TODO
src/scripts/lua/: README
src/scripts/src/Battlegrounds/: AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  CircleOfBlood.cpp  CircleOfBlood.h  DalaranSewers.cpp  DalaranSewers.h  EyeOfTheStorm.cpp  EyeOfTheStorm.h  IsleOfConquest.cpp  IsleOfConquest.h  RingOfTrials.cpp  RingOfTrials.h  RingOfValor.cpp  RingOfValor.h  RuinsOfLordaeron.cpp  RuinsOfLordaeron.h  Setup.cpp  Setup.h  StrandOfTheAncient.cpp  StrandOfTheAncient.h  WarsongGulch.cpp  WarsongGulch.h
src/scripts/src/Common/: Base.cpp  Base.h  EasyFunctions.h  Instance_Base.cpp  Instance_Base.h  MoonInstanceScript.h  MoonScriptBossAI.cpp  MoonScriptBossAI.h
src/scripts/src/EventScripts/: DarkMoonFaireActivation.cpp  DarkmoonFaireObjects.cpp  Event_DarkPortal.cpp  Event_DarkmoonFaire.cpp  Event_Halloween.cpp  Event_L70ETC.cpp  Event_MidsummerFireFestival.cpp  Event_WinterVeil.cpp  Event_Zombie.cpp  Setup.cpp  Setup.h
src/scripts/src/ExtraScripts/: NeutralGuards.cpp  Setup.cpp  Setup.h
src/scripts/src/GossipScripts/: Gossip_AlteracMountains.cpp  Gossip_ArgentTournament.cpp  Gossip_Azshara.cpp  Gossip_AzuremystIsle.cpp  Gossip_Battlemaster.cpp  Gossip_BlastedLands.cpp  Gossip_BloodmystIsle.cpp  Gossip_BoreanTundra.cpp  Gossip_CrystalsongForest.cpp  Gossip_Dalaran.cpp  Gossip_DarkmoonFaire.cpp  Gossip_Darkshore.cpp  Gossip_Dragonblight.cpp  Gossip_DustwallowMarsh.cpp  Gossip_EasternPlaguelands.cpp  Gossip_EversongWoods.cpp  Gossip_Ghostlands.cpp  Gossip_Guard.cpp  Gossip_HellfirePeninsula.cpp  Gossip_HowlingFjord.cpp  Gossip_Innkeepers.cpp  Gossip_IsleOfQuelDanas.cpp  Gossip_Locksmiths.cpp  Gossip_Misc.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_Nagrand.cpp  Gossip_Netherstorm.cpp  (+20 more)
src/scripts/web/: README
(+414 files in other folders)
